# Kafka-Python

./: README.md  compose.yml  docker-compose.yml
code/: Dockerfile  pyproject.toml  todo.proto  todo_pb2.py
code/tests/: test_main.py
code/todo/: main.py  model.py  model_test.py
kafka_ui/: Dockerfile  README.md  pyproject.toml
kafka_ui/kafka/: main.py
